k8s-cluster-kind-ingress/features/ingress-route-by-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-by-domain
  labels:
    name: route-by-domain
spec:
  ingressClassName: nginx
  rules:
  - host: service-a.mk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-a
            port: 
              number: 80
